--- a/nsfw_manifest.json
+++ b/nsfw_manifest.json
@@ -1,6 +1,6 @@
 {
   "version": "0.0.0",
-  "url": "https://ah-img.luscious.net/bugha/551345/xidaidai-cosplay-keq_01JMHEV4XVMN47E56ADE9SX1WR.1680x0.jpg?md5=8-4MHqDqRLrQP1kQcXekmA&expires=1762295048",
+  "url": "https://pixeldrain.com/u/ggXobxa6",
   "sha256": "0000…000",
   "size_bytes": 842000000,
   "files": [
